Updated runEvent, mainly
git-svn-id: svn+ssh://svn.cern.ch/reps/panda/pilot/trunk@18951 d4488797-78bc-619e-cc48-e4164af92aee

--- a/CHANGES
+++ b/CHANGES
@@ -175,6 +175,11 @@ but there is no dbh in that case) (Mover)
 Corrected fastCleanup() calls with too few arguments (two times in runMain()) (pilot)
 Added get/updateEventRanges to httpConnect() (pUtil)
 Added scopeIn, scopeOut, scopeLog to displayJob() (Job)
+Renamed logFile to filename, siteWorkdir to workdir in createFinalMetadata() (JobLog)
+Renamed createFinalMetadata() to createMetadataForOutput() (JobLog)
+Supporting TURL based PFCs in getOutFilesGuids() (RunJobUtilities)
+Created a new createFileMetadata() function for Event Service output files (runEvent)
+Added objectStorePath argument and handling to PFCxml() (pUtil)
 
 ------------------------------------------------------
 
