--- a/CHANGES
+++ b/CHANGES
@@ -192,6 +192,7 @@ Removed atlasProdPilot.py from distribution (and updated SiteMoverFarm.py, my_pr
 Removed dq2SiteMover from distribution (and updated SiteMoverFarm.py, my_proxy_utils.py, glexec_utils.py)
 Removed SRMSiteMover from distribution (and updated SiteMoverFarm.py, my_proxy_utils.py, glexec_utils.py)
 Removed GSIftpSiteMover from distribution (and updated SiteMoverFarm.py, my_proxy_utils.py, glexec_utils.py)
+Created __allowLoopingJobKiller(), used by __check_looping_jobs() (Monitor)
 
 Code contributions from Wen Guan, May 30, 2014:
 Added GFAL2SiteMover
