--- a/CHANGES
+++ b/CHANGES
@@ -248,6 +248,9 @@ Added scope_dict to sitemover_get_all_data() call in mover_get_data(), requested
 Added scope_dict argument to sitemover_get_all_data(), requested by Cedric Serdon (Mover)
 Added scope_dict to get_data() call in sitemover_get_all_data(), requested by Cedric Serdon (Mover)
 Added scope_dict to get_data() (aria2cSiteMover)
+Created extractHPCInfo() (pUtil)
+getSubprocessName() is now using extractHPCInfo() (Experiment)
+Updated getSubprocessName() for HPCs and event service jobs (Experiment)
 
 Code contributions from Wen Guan, May 30, 2014:
 Added GFAL2SiteMover
