--- a/CHANGES
+++ b/CHANGES
@@ -259,6 +259,8 @@ Sending si object to getLocalROOTSetup() from get_data(), put_data() (objectstor
 Added experiment variable to put_data() (objectstoreSiteMover, FAXSiteMover)
 Updated getLocalROOTSetup() to use si object to get path (objectstoreSiteMover, FAXSiteMover)
 Simplified verifySetupCommand() used by site movers. Moved longer version to ATLASExperiment (pUtil, ATLASExperiment)
+Updated doSpecialLogFileTransfer() to use catchall field for log to objectstore activation (ATLASExperiment)
+transferLogFile() is now using doSpecialLogFileTransfer() and the objectstoreSiteMover (JobLog)
 
 Code contributions from Wen Guan, May 30, 2014:
 Added GFAL2SiteMover
