--- a/CHANGES
+++ b/CHANGES
@@ -273,6 +273,7 @@ Added the new classes to glexec_utils.py (see 'Added to distribution below')
 Corrected a missing argument (experiment) in call to pUtil.postJobTask() in runMain() (pilot)
 Created verifyJobState() used by toServer() (pUtil)
 Added jobsetID data member plus handling in Job class (Job)
+Added convertToLFNs() used by createFileMetadata() (RunJobEvent)
 
 Code contributions from Wen Guan, May 30, 2014:
 Added GFAL2SiteMover
